@@ -13,6 +13,7 @@ git-annex (6.20161119) UNRELEASED; urgency=medium
   * rmurl: Added --batch mode.
   * fromkey: Accept multiple pairs of files and keys.
     Thanks, Daniel Brooks.
+  * rekey: Added --batch mode.
 
  -- Joey Hess <id@joeyh.name>  Mon, 21 Nov 2016 11:27:50 -0400
 
